<resources>
    <string name="app_name">Pomodoro Me</string>
    <string name="notification_button_restart">Resume Timing</string>
    <string name="notification_button_pause">Pause Timing</string>
    <string name="notification_paused">Timing paused</string>
    <string name="notification_pomodoro">Remember to %1$s</string>
    <string name="notification_rest">Pomodoro time</string>
    <string name="notification_auto_start_prompt">Start Pomodoro timing?</string>
    <string name="snack_auto_start">Start timing?</string>
    <string name="snack_go">Go</string>
    <string name="notification_auto_start_pressed">Timing started</string>
    <string name="snack_and_notification_auto_stopped">Reached end of timing for today</string>
    <string name="snack_dismiss">Dismiss</string>
    <string name="consent_form_show_error">Form failed, are you connected to the internet?</string>

    <!-- Preferences -->
    <string name="title_activity_settings">Settings</string>

    <string name="timed_settings_header">Timing</string>
    <string name="auto_start_stop_title">Auto Start/Stop</string>
    <string name="auto_start_title">Start automatically</string>
    <string name="auto_start_time_title">Start at</string>
    <string name="auto_stop_title">Stop automatically</string>
    <string name="auto_stop_time_title">Stop at</string>
    <string name="auto_days_title">Days of the week</string>

    <string name="alerts_header">Alerts</string>
    <string name="alerts_play_sounds">Play ringtones</string>
    <string name="alerts_vibrate">Vibrate</string>
    <string name="ringtone_pref_title_POMODORO">Pomodoro time</string>
    <string name="ringtone_pref_title_REST">Rest time</string>
    <string name="notifications_on_title">Send notifications</string>
    <string name="notifications_on_summary">When app is not visible</string>
    <string name="notifications_wake_up_title">Wake up from sleep</string>
    <string name="notifications_wake_up_summary">Only when charging (depends on device settings) EXPERIMENTAL</string>
    <string name="notifications_wake_up_dismiss_key_guard_title">Show when locked</string>
    <string name="notifications_wake_up_dismiss_key_guard_summary">Attempt to show over lock screen EXPERIMENTAL</string>

    <string name="reminders_title">Rest Time Reminders</string>
    <string name="show_reminders_title">Show in Rest time</string>
    <string name="show_reminders_order_title">Display sequence</string>
    <string name="show_reminders_cycle_title">In order</string>
    <string name="show_reminders_random_title">Random</string>
    <string name="show_reminders_list_title">Reminders list</string>
    <string name="reminders_new_prompt">New Reminder</string>
    <string name="delete_reminder">Reminder deleted</string>
    <string name="undo_delete_reminder">Undo</string>

    <string-array name="default_reminders">
        <item>Take a break</item>
        <item>Move your body</item>
        <item>Rest your eyes</item>
        <item>Do some exercise</item>
        <item>Go outside</item>
        <item>Be present</item>
        <item>Do something fun</item>
    </string-array>

    <string name="general_header">General</string>
    <string name="consent_pref_title">Consent for ads (EU only)</string>
    <string name="consent_pref_summary_required">Required</string>
    <string name="consent_pref_summary_not_required">Not applicable</string>
    <string name="consent_pref_summary_personalized">Allow personalized ads</string>
    <string name="consent_pref_summary_non_personalized">Do not personalize ads</string>
    <string name="settingsKeep_screen_awake_while_active_label">Keep screen on while timing</string>
    <string name="settingsKeep_screen_awake_while_active_summary">(Only when charging)</string>

    <!-- Keys to Preferences -->
    <string name="keepScreenAwake_pref_key" translatable="false">com.stillwindsoftware.pomodorome.keep_awake</string>
    <string name="auto_stop_time_pref_key" translatable="false">com.stillwindsoftware.pomodorome.auto_stop</string>
    <string name="auto_stop_pref_key" translatable="false">com.stillwindsoftware.pomodorome.enable_auto_stop</string>
    <string name="auto_start_time_pref_key" translatable="false">com.stillwindsoftware.pomodorome.auto_start</string>
    <string name="auto_start_pref_key" translatable="false">com.stillwindsoftware.pomodorome.enable_auto_start</string>
    <string name="auto_days_pref_key" translatable="false">com.stillwindsoftware.pomodorome.auto_days</string>
    <string name="play_sounds_pref_key" translatable="false">com.stillwindsoftware.pomodorome.play_sounds</string>
    <string name="vibrate_pref_key" translatable="false">com.stillwindsoftware.pomodorome.vibrate</string>
    <string name="showReminders_pref_key" translatable="false">com.stillwindsoftware.pomodorome.show_reminders</string>
    <string name="showReminders_random_pref_key" translatable="false">com.stillwindsoftware.pomodorome.random_reminders</string>
    <string name="showReminders_list_pref_key" translatable="false">com.stillwindsoftware.pomodorome.list_reminders</string>
    <string name="notifications_on_pref_key" translatable="false">com.stillwindsoftware.pomodorome.alert_notify</string>
    <string name="notifications_wake_up_pref_key" translatable="false">com.stillwindsoftware.pomodorome.alert_wakeup</string>
    <string name="notifications_wake_up_pref_dismiss_key" translatable="false">com.stillwindsoftware.pomodorome.alert_wakeup_dismiss</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-1327712413378636~2290792975</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-1327712413378636/3692053297</string>
    <string name="consent_pref_key" translatable="false">com.stillwindsoftware.pomodorome.consent</string>

    <!-- 🧑🏽‍🎓  -->
</resources>
