<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/auto_start_stop_title">

    <SwitchPreferenceCompat
        app:key="@string/auto_start_pref_key"
        app:title="@string/auto_start_title"
        app:defaultValue="false"
        />

    <Preference
        app:key="@string/auto_start_time_pref_key"
        app:title="@string/auto_start_time_title"
        app:dependency="@string/auto_start_pref_key"
        />

    <SwitchPreferenceCompat
        app:key="@string/auto_stop_pref_key"
        app:title="@string/auto_stop_title"
        app:defaultValue="false"
        />

    <Preference
        app:key="@string/auto_stop_time_pref_key"
        app:title="@string/auto_stop_time_title"
        app:dependency="@string/auto_stop_pref_key"
        />

    <MultiSelectListPreference
        app:key="@string/auto_days_pref_key"
        app:title="@string/auto_days_title"
        />

    </PreferenceCategory>
</PreferenceScreen>