<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/alerts_header">

        <SwitchPreferenceCompat
            app:key="@string/play_sounds_pref_key"
            app:title="@string/alerts_play_sounds"
            app:defaultValue="true"
            />

        <!-- NOTE: the keys to these 2 should not be changed, they have to match TimerType -->
        <androidx.preference.Preference
            app:key="com.stillwindsoftware.pomodorome.ringtone.POMODORO"
            app:title="@string/ringtone_pref_title_POMODORO"
            app:dependency="@string/play_sounds_pref_key"
            />

        <androidx.preference.Preference
            app:key="com.stillwindsoftware.pomodorome.ringtone.REST"
            app:title="@string/ringtone_pref_title_REST"
            app:dependency="@string/play_sounds_pref_key"
            />

        <SwitchPreferenceCompat
            app:key="@string/vibrate_pref_key"
            app:title="@string/alerts_vibrate"
            app:defaultValue="false"
            />

        <SwitchPreferenceCompat
            app:key="@string/notifications_on_pref_key"
            app:title="@string/notifications_on_title"
            app:summary="@string/notifications_on_summary"
            app:defaultValue="true"
            />

    </PreferenceCategory>

</PreferenceScreen>
