<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sounds_header">

        <!-- NOTE: the keys to these 2 should not be changed, they have to match TimerType -->
        <androidx.preference.Preference
            app:key="com.stillwindsoftware.pomodorome.ringtone.POMODORO"
            app:title="@string/ringtone_pref_title_POMODORO"/>

        <androidx.preference.Preference
            app:key="com.stillwindsoftware.pomodorome.ringtone.REST"
            app:title="@string/ringtone_pref_title_REST"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/timed_settings_header">

        <Preference
            app:title="@string/auto_start_stop_title"
            app:fragment="com.stillwindsoftware.pomodorome.SettingsActivity$SettingsAutoStartFragment" />

    </PreferenceCategory>

    <SwitchPreferenceCompat
        app:key="@string/keepScreenAwake_pref_key"
        app:title="@string/settingsKeep_screen_awake_while_active_label"
        app:defaultValue="true"/>

        <!--EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />
        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" /-->

</PreferenceScreen>
